<resources>
    <string name="app_name">shareRide</string>
    <string name="log_in_title">Log In</string>
    <string name="close_log_in">Close Log In</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="log_in_button">Log In</string>
    <string name="forgot_password_text">Forgot your password?</string>


    <string name="mapbox_access_token">pk.eyJ1IjoicGNhbXBpbm9ycnIiLCJhIjoiY2x0eW8zY2Y0MGo3dzJocGFrNGxwZG0xNiJ9._UAVbyNYayAoA5RSiwOrfg</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="i_am_a_driver_optional">I am a driver (Optional)</string>
    <string name="i_would_like_to_receive_your_newsletter_and_other_promotional_information">I would like to receive your newsletter and other promotional information.</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="close_sing_up">Close Sing UP</string>
    <string name="avoid_using_special_characters_in_your_name">Avoid using special characters in your name</string>
    <string name="your_password_is_not_secure_enough_n_check_for_n_at_least_8_characters_n_at_least_1_special_character_n_at_least_1_number_character">Your password is not secure enough. \n Check for: \n - At least 8 characters \n - At least 1 special character \n - At least 1 number character</string>
    <string name="your_email_may_not_have_the_structure_of_a_email_n_user_your_institutional_email">- Your email may not have the structure of a email.\n - User your institutional email.</string>
    <string name="where_to">Where to?</string>
    <string name="where_are_you_heading_today">Where are you heading today?</string>
    <string name="Active_rides">Active Rides</string>
    <string name="search">Search</string>
    <string name="create_new_ride">Create new ride</string>
    <string name="create_ride">Create ride</string>
    <string name="Active_rides_2">You do not have active rides at the moment</string>
    <string name="select_vehicle">Select vehicle</string>
    <string name="number_of_passengers">Number of passengers</string>
    <string name="why_don_t_giving_a_try_to_a_bike_commute">Why don’t giving a try to a bike commute?</string>
    <string name="add_new_transport">add new Transport</string>
    <string name="from">From</string>
    <string name="from_icon_upwards_arrow">From icon upwards arrow</string>
    <string name="to_downwards_icon">to downwards icon</string>
    <string name="add_new_location">Add new location</string>
    <string name="ubication_name">* Ubication name</string>
    <string name="send">Send</string>
    <string name="add_a_new_location">Add a new location</string>
    <string name="name">*Name</string>
    <string name="ubication">*Ubication</string>
    <string name="today">today</string>

    <string name="destination_location">Destination location</string>
    <string name="departure_location">Departure location</string>
    <string name="_00_00_pm">00:00 pm</string>
    <string name="price">Price</string>
    <string name="vehicleformtitle">vehicleFormTitle</string>
    <string name="vehicleformcancelbutton_description">vehicleFormCancelButton_Description</string>
    <string name="vehicleformtype_hint">vehicleFormType_Hint</string>
    <string name="vehicleformplate_hint">vehicleFormPlate_Hint</string>
    <string name="vehicleformreference_hint">vehicleFormReference_Hint</string>
    <string name="vehicleformcolor_hint">vehicleFormColor_Hint</string>
    <string name="vehicleformbutton">Send</string>
    <string name="vehicle_formPictureButton">Vehicle Picture</string>
    <string name="vehicle_color">Vehicle Color</string>
    <string name="vehicle_mark">Vehicle Mark</string>
    <string name="vehicle_reference">Vehicle Reference</string>
    <string name="vehicle_plate">Vehicle Plate</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_form">Vehicle Form</string>
    <string name="title_activity_trip">tripActivity</string>
    <string name="pick_your_ride">Pick your ride</string>
    <string name="add_new_destination_location">add new destination location</string>
    <string name="add_your_locationa_as_origin">add your locationa as origin</string>
    <string name="connect_to_the_internet_to_interact_with_our_map">Connect to the internet to interact with our map</string>
    <string name="your_are_currently_offline">Your are currently offline</string>
    <string name="we_can_t_acces_to_the_current_popular_destinations">We can\'t acces to the current popular destinations</string>
    <string name="we_can_t_access_the_current_popular_destinations">We can\'t access the current popular destinations</string>
    <string name="car_icon">car icon</string>
</resources>

