<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_onPrimary"
    android:orientation="vertical"
    android:scrollbars="vertical"

    tools:context=".activities.singUp.SingUpActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_light_onPrimary"
        android:orientation="vertical"
        android:padding="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_light_onPrimary"
            android:gravity="center"
            android:orientation="horizontal"

            android:textAlignment="center"

            >

            <ImageButton
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@android:color/transparent"

                android:contentDescription="@string/close_log_in"

                app:srcCompat="@drawable/baseline_clear_24" />

            <TextView
                android:layout_width="219dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:elegantTextHeight="true"
                android:text="@string/log_in_title"

                android:textSize="40sp" />


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />


        <EditText
            android:id="@+id/emailInputSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15sp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/common_google_signin_btn_text_light"
            android:textColorHint="@color/common_google_signin_btn_text_light"
            android:textSize="20sp"

            />

        <EditText
            android:id="@+id/passwordInputSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15sp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/common_google_signin_btn_text_light"
            android:textColorHint="@color/common_google_signin_btn_text_light"
            android:textSize="20sp" />


        <Button
            android:id="@+id/singUpbutton2"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/log_in_button"
            android:textAlignment="center"
            android:textColor="@color/md_theme_light_onPrimary"
            android:textSize="20sp"
            app:backgroundTint="@color/md_theme_light_primary"
            app:cornerRadius="100dp"


            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_text"
            android:textAlignment="center"
            android:textColor="@color/md_theme_light_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

</LinearLayout>





